--- a/index.css
+++ b/index.css
@@ -53,10 +53,38 @@ main {
     1em 2em 1em hsla(217, 51%, 8%, 0.403),
     -1em 2em 1em hsla(217, 51%, 8%, 0.403);
 }
+main .head-img {
+  position: relative;
+  height: 16em;
+}
 
-main > img {
+main .head-img > img {
   width: 100%;
   border-radius: var(--br-in);
+}
+
+main .head-img:hover {
+  cursor: pointer;
+}
+main .head-img:hover .voir {
+  width: 100%;
+  background: hsla(178, 100%, 50%, 0.5);
+  position: absolute;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: var(--br-in);
+}
+
+.voir {
+  width: 0;
+  height: 0;
+}
+
+.voir img {
+  width: 10%;
 }
 .desc {
   display: flex;
@@ -67,6 +95,11 @@ main > img {
 .desc .header {
   color: var(--White);
   font-weight: var(--fw-600);
+}
+.desc .header:hover,
+footer .name:hover {
+  color: var(--Cyan-400);
+  cursor: pointer;
 }
 .detail {
   display: flex;
